SSC-1466 fix slider init issu when slider is inside a tab hidden or a inside collapse hidden

--- a/silversea-com-ui/jcr_root/etc/designs/silversea-com/clientlib-base/less/components/c-cruise/c-cruise-suitelist.less
+++ b/silversea-com-ui/jcr_root/etc/designs/silversea-com/clientlib-base/less/components/c-cruise/c-cruise-suitelist.less
@@ -140,7 +140,10 @@
 
     &__collapse {
         background-color: @grey--e;
-        padding: 20px 15px 1px;
+
+        .c-tab {
+            padding: 20px 15px 1px;
+        }
 
         &__title {
             font-size: 16px;
