--- a/silversea-com-ui/jcr_root/etc/designs/silversea-com/clientlib-base/less/components/c-slider.less
+++ b/silversea-com-ui/jcr_root/etc/designs/silversea-com/clientlib-base/less/components/c-slider.less
@@ -203,3 +203,17 @@
         }
     }
 }
+
+/* Workaround */
+/* Styles for solving the issue slick inside collapse*/
+    .contains-slider {
+        .collapse {
+            display: block !important;
+            height: 0;
+            overflow: hidden;
+ 
+         &.in {
+            height: auto !important;
+         }
+    }
+}
